--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             <small class="block">
               Design by
               <a href="https://instagram.com/shofian_alfikri46">
-                @shofian_alfikri46
+                @nurawansullivan
               </a>
               .
             </small>
